@@ -14,7 +14,11 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: auth-rhosts.c,v 1.33 2005/07/17 07:17:54 djm Exp $");
+RCSID("$OpenBSD: auth-rhosts.c,v 1.34 2006/02/07 01:08:04 stevesk Exp $");
+
+#ifdef HAVE_NETGROUP_H
+# include <netgroup.h>
+#endif
 
 #include "packet.h"
 #include "uidswap.h"
